grotendeels klaar